Bug#20471 LIKE search fails with indexed utf8 char column The main problem was already fixed by Igor under terms of 16674. Adding some additional minor fixes and tests.